@@ -1,3 +1,5 @@
+AUX cgiwrap-fcgi.init 651 RMD160 d1ca24940a1c45be87aecd39f55baead6596a2a4 SHA1 7a9143e2e8c39ef224d7e941c5e449606bddf7ac SHA256 937eada446d566169314799e69ae045cdcd6d49fbb88ff0792a7e39c4f8f404f
+AUX cgiwrap-fcgi.pl 3094 RMD160 f46795fda63a1f4bfd3a8a63bce56842af757b07 SHA1 6a78d16d60efad3c23ec2d707bf9560138ea6007 SHA256 99510695624a149e6e29f935e6e4c843f9b549efc7cccfb9c488102e2f99c507
 AUX nginx.conf-r4 1358 RMD160 a948df249a16be86c114d587cfa5ee570d84a356 SHA1 e9db0447a1beb326a0858cf8189328229d1d3edf SHA256 6ff6c9301ea2a4d74a335b9119d7f9dba87d4e83793cf22d837d49f061763096
 AUX nginx.init-r2 1827 RMD160 2ece9278fd4a3ca948106e024c2607fca02e2599 SHA1 76af70e8fcad8b298851382d18160d11dc3e2cca SHA256 89801c2e0ea3480380dedfbc84b0cc993ab6b93768886246a22e650ba0a61798
 AUX nginx.logrotate 364 RMD160 9fdfd2ea2f49b8dba20a030d893e34779bb32364 SHA1 4ab07992fa5c64f753e3643e1b51fcab4dec6ccf SHA256 9e3e090dfd10861d5f9b279e19113ce8d05caf9f33d488f6aabf9f19ac0cf925
@@ -10,6 +12,6 @@ DIST ngx_http_headers_more-0.15.tar.gz 22738 RMD160 2200ab529a086dd6bcf11a9a0470
 DIST ngx_slowfs_cache-1.6.tar.gz 10972 RMD160 e1d10851db4a55fc465665caa3f6989d142af2d3 SHA1 072d06b7547629b244bebeef7df7425567f264c9 SHA256 cc0505dbba30153691ff7b3a7353804d5ceb9a519a407b938cae49e9913a7bcc
 DIST ngx_upload_progress-0.8.2.tar.gz 16559 RMD160 3aadb9bf9b15b3810d1acb466d331ea5bdae6062 SHA1 cbff2734cccc3ac93b3422a9a01547af29f9c11d SHA256 cab70d2e300cfa0d9d7d3b34bf27810533ecbf11dddcd5078a4754cfab337c95
 DIST passenger-3.0.8.tar.gz 2362561 RMD160 1264b76a3440492b3d435050007611735a627c72 SHA1 265d1dcb66a29b944fa475f7d6831ce16ac37e2e SHA256 ccef21dc97b54de17c1d44644b2bc67b7732a860ff67206a4c557727311a8349
-EBUILD nginx-1.1.2-r9.ebuild 11373 RMD160 097a10afe254db61c52fd8a0c58f474e26b453fa SHA1 6f1ecf445367aeb71fa9264473e9774b689b6fe0 SHA256 53bd2327c8c7ae70a2854a2e571dfcf7756dcfcba77ac93c0fcd51f056c8924f
-MISC ChangeLog 47676 RMD160 77221c0060c7e6bf1d02290145517193ed6bdcd1 SHA1 9be4db1091b898f3dedb289f63b576f244f0b04f SHA256 6ed957a5af7e77cfde597332edcd1bc66b2c8a857cd1431fa59c4bba2e1ba1dc
+EBUILD nginx-1.1.2-r10.ebuild 11528 RMD160 e35ddc9ef5216b67844cb8a9f74bb34d3fe53e41 SHA1 b70572b2ec7947396cc187a70c776f750e8d713c SHA256 25f5c7493e2e5970e698169a0eedb0d38ef8d78a7248594fefba978debfd3001
+MISC ChangeLog 47899 RMD160 2fd3f3a9466abcb048d5155cd5c6987a94c69bdf SHA1 aeb5bdc8a5072b0b1fe14cf16334904b0cc86af4 SHA256 1527b46149d4bc47deaf3d4003e2aa54b4207c86a56b25b20e9ff3be962e05ca
 MISC metadata.xml 2402 RMD160 fee632a79ad08ef0fe36cd73d718a81348d71370 SHA1 12b7d3eac7a8e9f99dbe2b64bc288aa5e3f4608c SHA256 f133dca88780f2716797c5d2fc309466013d35b3dccf752ab27fb4ee399c6e47
